tests/invalidTest/typeConvert/test_4.q
# EXPECT type cannot be converted
def uint16 test(){

  sint32 var2 = 6      #assign & int var
  uint64 var3 = var2
  return 0
}

